# langgraph-text-2-sql

./: LICENSE  README.md  main.py  pyproject.toml
backend/graph/: consts.py  graph.py  state.py
backend/graph/chains/: data_explainer.py  db_connection_error_explainer.py  db_schema_formatter.py  sql_query_generator.py  user_input_validator.py
backend/graph/nodes/: data_explain.py  db_config_checker.py  fetch_data.py  fetch_db_schema.py  format_db_schema.py  sql_generation.py  user_input_checker.py
frontend/: ui.py  visualizer.py
